2007-05-04  Andreas Kupries  <andreask@activestate.com>

	* comm.tcl: Bugfixes in the handling of -interp for regular
	* comm.man: scripts. The handling of the buffer was wrong for
	* pkgIndex.tcl: scripts which are a single statement as
	  list. Fixed missing argument to new command commSendReply,
	  introduced by version 4.5. Affected debugging. Bumped package
	  version to 4.5.1.

2007-05-01  Andreas Kupries  <andreask@activestate.com>

	* comm.tcl: Added ability to asynchronously generate script
	* comm.man: results. Enables proper handling of long-running
	* comm.test: operations (like db queries) without blocking the
	* comm.slaveboot: server, nor requiring nested eventloops. 
	* pkgIndex.tcl: Extended documentation, and testsuite. Version
	  bumped to 4.5. Now depending on snit, and Tcl 8.3.

2007-03-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.man: Fixed all warnings due to use of now deprecated
	* comm_wire.man: commands. Added a section about how to give
	  feedback.

2006-11-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.tcl (commRunHook): Fixed double execution of the hook
	  script. Thanks to Will Duquette for the report.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-19  Andreas Kupries <andreask@activestate.com>

	* pkgIndex.tcl: Bumped to version 4.4. changes were extension
	* comm.tcl:     of the existing API.
	* comm.man:

2006-09-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm_wire.man: Clarified the use of the TCP port in the initial
	  message a bit more, i.e. the meaning of the special value '0'.

	* comm.tcl: The rewrite of the hook handling broken the promised
	* comm.man: semantics. Fixed. Also extended the handling of a
	  configured -interp to deal with a variety of possibilities
	  regarding missing or hidden commands. Updated the documentation.
