@@ -1,3 +1,9 @@
+2007-05-10  Andreas Kupries  <andreask@activestate.com>
+
+	* comm.tcl: Bugfix in the wrapper for 'update'. Bumped the
+	* comm.man: package version to 4.5.2.
+	* pkgIndex.tcl: 
+
 2007-05-04  Andreas Kupries  <andreask@activestate.com>
 
 	* comm.tcl: Bugfixes in the handling of -interp for regular
